[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/answer_zone/FractionDisplay.tscn" type="PackedScene" id=1]
[ext_resource path="res://game_fonts/lmroman25.tres" type="DynamicFont" id=2]
[ext_resource path="res://tests/TestFractionDisplay.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 4, 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="numerator_input" type="TextEdit" parent="."]
margin_left = 232.0
margin_right = 432.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="denominator_input" type="TextEdit" parent="."]
margin_left = 232.0
margin_top = 75.0
margin_right = 432.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FractionDisplay" parent="." instance=ExtResource( 1 )]

[connection signal="text_changed" from="numerator_input" to="." method="_on_numerator_input_text_changed"]
[connection signal="text_changed" from="denominator_input" to="." method="_on_denominator_input_text_changed"]
